<resources>
    <string name="app_name">DMSA2</string>

    <string name="title_activity_battlefield">Battlefield</string>
    <string name="title">DMS: Tag Game</string>
    <string name="start_mode">Start Mode:</string>
    <string name="button_make_discoverable">Make Discoverable</string>
    <string name="button_host_create">Create a Battlefield</string>
    <string name="button_warrior_join">Join a Battlefield</string>
    <string name="bluetooth_status">Bluetooth Status:</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_unsupported">Device does not support Bluetooth</string>
    <string name="status_off">Bluetooth currently off</string>
    <string name="status_turning_on">Bluetooth is turning on</string>
    <string name="status_on">Bluetooth currently on</string>
    <string name="status_turning_off">Bluetooth is turning off</string>
    <string name="status_connectable_discoverable">Bluetooth is connectable and discoverable</string>
    <string name="status_connectable">Bluetooth is connectable but not discoverable</string>
    <string name="status_neither_connectable_discoverable">Bluetooth is neither connectable nor discoverable</string>
    <string name="posted">Post Message:</string>
    <string name="button_ready">Ready for Battle</string>
    <string name="battle_updates">Battle Field Info:</string>
    <string name="title_activity_battle_action">BattleAction</string>

    <string name="buttonRock">Rock</string>
    <string name="buttonPaper">Paper</string>
    <string name="buttonScissors">Scissors</string>
    <string name="attackText">Please select an Attack</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
