<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_mode" />

    <Button
        android:id="@+id/discoverable_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_make_discoverable" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_host_create" />

        <Button
            android:id="@+id/bJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_warrior_join" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_status" />

    <TextView
        android:id="@+id/status_textview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/status_unknown" />

</LinearLayout>