<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff4040"
    android:columnCount="1" >

    <Button
        android:id="@+id/bRock"
        android:layout_column="0"
        android:layout_gravity="start|bottom"
        android:layout_row="0"
        android:text="@string/buttonRock"
        android:onClick="onClick" />

    <Button
        android:id="@+id/bPaper"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="0"
        android:text="@string/buttonPaper"
        android:onClick="onClick" />

    <Button
        android:id="@+id/bScisssors"
        android:layout_column="0"
        android:layout_gravity="end|bottom"
        android:layout_row="0"
        android:text="@string/buttonScissors"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/attackText"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/attackText">
    </TextView>

</GridLayout>